--- a/index.html
+++ b/index.html
@@ -32,26 +32,32 @@
     </section>
 
     <!-- Serviços -->
-    <section id="servicos" class="servicos">
-        <h2 class="section-title">Meus Serviços</h2>
-        <div class="servicos-container">
-            <div class="servico">
-                <div class="servico-icon"><i class="fa fa-laptop-code"></i></div>
-                <h3>Sites Institucionais</h3>
-                <p>Sites profissionais para empresas, blogs e portfólios pessoais com design exclusivo.</p>
-            </div>
-            <div class="servico">
-                <div class="servico-icon"><i class="fa fa-shopping-cart"></i></div>
-                <h3>E-commerce</h3>
-                <p>Criação de lojas virtuais eficientes e atraentes, para aumentar suas vendas online.</p>
-            </div>
-            <div class="servico">
-                <div class="servico-icon"><i class="fa fa-mobile-alt"></i></div>
-                <h3>Design Responsivo</h3>
-                <p>Sites que se ajustam perfeitamente a qualquer dispositivo, garantindo uma ótima experiência em todos os tamanhos de tela.</p>
-            </div>
+    <section id="services" class="services">
+    <h2 class="section-title">Meus Serviços</h2>
+    <div class="services-container">
+        <div class="service-card">
+            <i class="service-icon fas fa-laptop-code"></i>
+            <h3>Criação de Sites</h3>
+            <p>Desenvolvo sites modernos, rápidos e responsivos para destacar sua marca na web.</p>
         </div>
-    </section>
+        <div class="service-card">
+            <i class="service-icon fas fa-palette"></i>
+            <h3>Design Gráfico</h3>
+            <p>Criação de layouts personalizados, identidade visual e design gráfico para sua marca.</p>
+        </div>
+        <div class="service-card">
+            <i class="service-icon fas fa-mobile-alt"></i>
+            <h3>Sites Responsivos</h3>
+            <p>Garantimos que seu site seja acessível e funcional em qualquer dispositivo.</p>
+        </div>
+        <div class="service-card">
+            <i class="service-icon fas fa-search-dollar"></i>
+            <h3>SEO e Otimização</h3>
+            <p>Otimização para motores de busca para melhorar o posicionamento do seu site no Google.</p>
+        </div>
+    </div>
+</section>
+
 
     <!-- Portfólio -->
     <section id="portfolio" class="portfolio">
