--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="portfolio-card-content">
                 <h3>Projeto 1: Site Corporativo</h3>
                 <p>Design moderno e funcional, otimizado para uma empresa de tecnologia.</p>
-                <a href="https://seusite1.com" class="portfolio-button" target="_blank">Ver Projeto</a>
+                <a href="https://fiedlercontabilidade.netlify.app/" class="portfolio-button" target="_blank">Ver Projeto</a>
             </div>
         </div>
         <div class="portfolio-card">
@@ -81,7 +81,7 @@
             <div class="portfolio-card-content">
                 <h3>Projeto 3: Portfólio Pessoal</h3>
                 <p>Site pessoal com animações e design elegante para um designer gráfico.</p>
-                <a href="https://seusite3.com" class="portfolio-button" target="_blank">Ver Projeto</a>
+                <a href="https://systemupsolucoes.netlify.app/" class="portfolio-button" target="_blank">Ver Projeto</a>
             </div>
         </div>
     </div>
